src/objects/Guest__c.object
<CustomObject>
    <fields>
        <fullName>Attend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>deprecated_出席</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkin__c</fullName>
        <formula>IF( TEXT(Status__c) = &apos;attended&apos; || TEXT(Status__c) = &apos;submitted&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出席</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>会社</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先責任者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ゲスト</relationshipLabel>
        <relationshipName>Guest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>名</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_Pass_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>受講票配信済み</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handout_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>資料配信済み</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>姓</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>メール配信済み</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated since v4 1.31 (23.5.2013)</description>
        <label>複数の取引先責任者に該当</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>IF(ISBLANK(First_Name__c), 
Last_Name__c,
Last_Name__c + &apos; &apos; +  First_Name__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>名前</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>電話番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Profile_Photo__c</fullName>
        <label>プロフィール写真URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>イベント</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>ゲスト</relationshipLabel>
        <relationshipName>Guest</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>状況</label>
        <picklist>
            <picklistValues>
                <fullName>registered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Link_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>アンケートリンク配信済み</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>役職</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Posted_To_Record_Feed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chatterに投稿する必要有り</label>
        <type>Checkbox</type>
    </fields>
    <label>ゲスト</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Company__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>GST-{00000000}</displayFormat>
        <label>ゲスト番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>